# LLVMAssignment1

./: MyPasses.cpp
Assignment1/: .gitignore  MyPasses.cpp  README.MD
Assignment1/test/: test_algebraic_identity.c
Assignment2/: README.MD
Assignment3/: MyPasses.cpp  README.MD  script.sh
Assignment3/test/: loop_test.c  test_dom.c  test_licm.c  test_licm_advanced.c
Assignment4/: CMakeLists.txt  MyPasses.cpp  README.MD  script.sh
Assignment4/test/: test_loop_fusion.c
test/: test.c
